# wemaketrouble

./: .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
nayla_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/: landing.html
user_profile/: admin.py  models.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py
user_profile/templates/dashboard/: customer_dashboard.html  stylist_dashboard.html
user_profile/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup_customer.html  signup_stylist.html
