[project]
name = "hackathon"
version = "0.1.0"  # <-- fixed: valid SemVer
description = "a small prototype for the Nayla project"
authors = [
    { name = "Cuaima", email = "cl@udia.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"  # <-- Python version requirement
dependencies = ["make (>=0.1.6.post2,<0.2.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
